add new updates 05/Sept/2022

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,11 @@ Fields/
 Fields-all_dr3/
 Fields-DR3/
 stilts.jar
-
+Elismar.zip
+SpecZ_Catalogue_20220701.csv
+hydra_specz.csv
+Abell1644_Fields.csv
+to_play/
+CreateSpecCatalogue/
+.ipynb_checkpoints/
+Trash/
